[package]
name        = "cade-server"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[features]
mcp = ["dep:cade-mcp", "cade-agent/mcp"]

[dependencies]
# -- Workspace crates
cade-core.path       = "../cade-core"
cade-ai.path         = "../cade-ai"
cade-store.path      = "../cade-store"
cade-agent = { path = "../cade-agent", default-features = false, optional = false }
cade-mcp   = { path = "../cade-mcp", optional = true }
# -- Error handling
derive_more.workspace  = true
# -- Serialisation
serde.workspace        = true
serde_json.workspace   = true
# -- Logging
tracing.workspace      = true
# -- Async
tokio.workspace        = true
tokio-stream.workspace = true
futures.workspace      = true
reqwest        = { workspace = true, features = ["stream"] }
tokio-util = { version = "0.7.13", features = ["io"] }
# -- Misc utilities
uuid.workspace         = true
chrono.workspace       = true
dotenvy.workspace      = true
dirs.workspace         = true
# -- Server
axum.workspace         = true
tower-http.workspace   = true
rusqlite.workspace     = true
# -- Auth
subtle = "2.6.1"
getrandom = { workspace = true }
# -- Embedded WASM dashboard assets (built by `trunk build` in cade-gui)
rust-embed = "8.11.0"
lru = "0.12"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }
async-trait.workspace = true
