[package]
name = "cade-store"
version = "0.2.0"
edition = "2024"

[features]
default         = ["bundled-sqlite", "semantic-search"]
bundled-sqlite  = ["rusqlite/bundled"]
# Enabled by default since 2026-04-30 (F3 in memory-system refactor): provides
# cosine-similarity hybrid ranking in `search_memory()` via fastembed + sqlite-vec.
# To opt out (smaller binary, no ONNX runtime), build with `--no-default-features
# --features bundled-sqlite`.
semantic-search = ["dep:fastembed", "dep:sqlite-vec", "dep:zerocopy"]

[dependencies]
cade-core = { path = "../cade-core" }
cade-ai = { path = "../cade-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
machine-uid = { workspace = true }
getrandom = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }

# Optional: semantic search embeddings
fastembed = { workspace = true, optional = true }
sqlite-vec = { workspace = true, optional = true }
zerocopy = { workspace = true, optional = true }
