[package]
name = "cade-store"
version = "0.2.4"
edition = "2024"

[features]
default         = ["bundled-sqlite"]
bundled-sqlite  = ["rusqlite/bundled", "r2d2_sqlite/bundled"]
# WI-SEMANTIC: opt-in. Default build does NOT pull fastembed/sqlite-vec.
semantic-search = ["dep:fastembed", "dep:sqlite-vec"]

[dependencies]
cade-core = { path = "../cade-core" }
cade-ai = { path = "../cade-ai" }
fastembed  = { workspace = true, optional = true }
sqlite-vec = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
machine-uid = { workspace = true }
getrandom = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
criterion = "0.8.2"



[[bench]]
name = "memory_bench"
harness = false
