[package]
name = "cade-store"
version = "0.2.4"
edition = "2024"

[features]
default         = ["bundled-sqlite"]
bundled-sqlite  = ["rusqlite/bundled", "r2d2_sqlite/bundled"]
# WI-SEMANTIC: opt-in. Default build does NOT pull fastembed/sqlite-vec.
semantic-search = ["dep:fastembed", "dep:sqlite-vec"]
rig-compat      = ["dep:rig-core"]
enterprise-postgres = ["dep:tokio-postgres", "dep:pgvector"]
enterprise-qdrant = ["dep:qdrant-client"]

[dependencies]
cade-core = { path = "../cade-core" }
cade-ai = { path = "../cade-ai" }
fastembed  = { workspace = true, optional = true }
sqlite-vec = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
machine-uid = { workspace = true }
getrandom = { workspace = true }
parking_lot = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }

# Rig compatibility
rig-core = { workspace = true, optional = true }

# Optional enterprise postgres & pgvector
tokio-postgres = { version = "0.7", optional = true, features = ["with-serde_json-1"] }
pgvector = { version = "0.4.2", optional = true, features = ["postgres"] }
qdrant-client = { version = "1.18", optional = true }

[dev-dependencies]
criterion = "0.8.2"



[[bench]]
name = "memory_bench"
harness = false
