[package]
name        = "cade-tui"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[dependencies]
# -- Workspace crates
cade-core.path       = "../cade-core"
# -- Error handling
# -- Others
derive_more.workspace  = true
# -- Async
tokio.workspace        = true
# -- CLI / TUI
crossterm.workspace    = true
ratatui.workspace      = true
unicode-width.workspace = true
pulldown-cmark.workspace = true
# -- Misc utilities
regex.workspace        = true
dirs.workspace         = true
# -- Clipboard / image
image.workspace        = true
base64.workspace       = true
arboard.workspace      = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
