[package]
name        = "cade-tui"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[features]
default = ["clipboard-images", "syntax-highlighting"]
clipboard-images = ["dep:image", "dep:base64", "dep:arboard"]
syntax-highlighting = ["dep:syntect"]

[dependencies]
tui-textarea = { version = "0.7", features = ["ratatui", "crossterm"] }
# -- Workspace crates
cade-core.path       = "../cade-core"
# -- Error handling
# -- Others
derive_more.workspace  = true
# -- Async
tokio.workspace        = true
# -- CLI / TUI
crossterm.workspace    = true
ratatui.workspace      = true
unicode-width.workspace = true
pulldown-cmark.workspace = true
syntect       = { workspace = true, optional = true }
ansi-to-tui.workspace  = true
regex.workspace = true
dirs.workspace         = true
chrono.workspace       = true
serde_json.workspace   = true
parking_lot.workspace  = true
# -- Clipboard / image (optional)
image   = { workspace = true, optional = true }
base64  = { workspace = true, optional = true }
arboard = { workspace = true, optional = true }

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
