[package]
name        = "cade-tui"
version     = "0.2.0"
edition     = "2024"

[lib]
doctest     = false

[features]
default = ["clipboard-images", "syntax-highlighting"]
clipboard-images = ["dep:image", "dep:base64", "dep:arboard"]
syntax-highlighting = ["dep:syntect"]

[dependencies]
tui-textarea-2 = { version = "0.10", features = ["ratatui", "crossterm"] }
# -- Workspace crates
cade-core.path       = "../cade-core"
# -- Error handling
# -- Others
derive_more.workspace  = true
tracing.workspace      = true
# -- Async
tokio.workspace        = true
# -- CLI / TUI
crossterm.workspace    = true
ratatui.workspace      = true
unicode-width.workspace = true
pulldown-cmark.workspace = true
syntect       = { workspace = true, optional = true }
ansi-to-tui.workspace  = true
regex.workspace = true
dirs.workspace         = true
chrono.workspace       = true
serde_json.workspace   = true
parking_lot.workspace  = true
# -- Clipboard / image (optional)
image   = { workspace = true, optional = true }
base64  = { workspace = true, optional = true }
arboard = { workspace = true, optional = true }
opaline = { version = "0.4", features = ["ratatui", "builtin-themes"] }
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serialize", "send"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
