[package]
name        = "cade-web"
version     = "2.2.0"
edition     = "2024"

[lib]
doctest = false

[dependencies]
# -- Workspace crates
cade-core.path = "../cade-core"
# -- Error handling
derive_more.workspace = true
# -- Serialisation
serde.workspace      = true
serde_json.workspace = true
# -- Logging
tracing.workspace    = true
# -- Async
tokio.workspace      = true
# -- HTTP
reqwest = { workspace = true, features = ["json"] }
# -- HTML parsing
scraper = "0.26"
# -- URL handling
url = "2"
# -- Misc
regex.workspace = true
urlencoding.workspace = true

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
